update favicon and some style

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <a href="#experience" class="nav-link scrollto"><i class="bx bx-file"></i> <span>Experience</span></a>
           </li>
           <li>
+            <a href="#portfolio" class="nav-link scrollto"><i class="bi bi-briefcase"></i> <span>Portfolio</span></a>
+          </li>
+          <li>
             <a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a>
           </li>
           <li>
@@ -340,7 +343,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Professional Experience (9 years)</h3>
             <div class="resume-item">
               <h4>Full Stack Developer</h4>
               <h5>2024 - Present</h5>
@@ -370,8 +373,7 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">PHP Developer</h3>
-            <div class="resume-item">
+            <div class="resume-item" style="margin-top: 80px;">
               <h4>PHP Developer</h4>
               <h5>Jan 2019 - Jul 2021</h5>
               <p><em>Hypersee, Iran</em></p>
@@ -401,6 +403,76 @@
       </div>
     </section>
     <!-- End Experience Section -->
+<!-- ======= Portfolio Section ======= -->
+<section id="portfolio" class="portfolio">
+  <div class="container">
+    <div class="section-title">
+      <h2>Featured Portfolio Pieces</h2>
+      <p>
+        These are the latest projects I've been working on, showcasing my expertise and creativity in web development. Explore my recent work to see the innovative solutions I've delivered.
+      </p>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+        <h4 class="title"><img class="image-sites" src="assets/img/tutor.PNG"/><a href="https://itutorfriends.com/" target="_blank">Itutorfriends</a></h4>
+        <p class="description">
+          Online tutoring platform connecting Canadian students with peer tutors
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+        <h4 class="title"><img class="image-sites"src="assets/img/Blacks-Flies.png"/><a target="_blank" href="https://blacksflies.com/">Blacksflies</a></h4>
+        <p class="description">
+          Wholesaler Of Premium Hand-Tied Fishing Flies For Canadian And US Dealers
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+        <h4 class="title"><img class="image-sites" src="assets/img/airdrie.PNG"/><a target="_blank" href="https://airdriebriarhillmidwives.com/">Briarhillmidwives</a></h4>
+        <p class="description">
+          Briar Hill Midwives is the longest established midwifery practice in the Calgary Municipal District.
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+        <h4 class="title"><img class="image-sites" src="assets/img/carmelita.PNG"/><a target="_blank" href="https://carmelitarealtor.com/">Carmelitarealtor</a></h4>
+        <p class="description">
+          Carmelita is a Personal Real Estate Corporation
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+        <h4 class="title"><img class="image-sites" src="assets/img/Tayco-Water-Solutions.png"/><a target="_blank" href="https://taycowatersolutions.com/">Taycowatersolutions</a></h4>
+        <p class="description">
+          SMART WATER RECYCLING For Residential and Commercial Uses
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+        <h4 class="title"><img class="image-sites" src="assets/img/sierradriving.png"/><a target="_blank" href="https://www.sierradrivingschool.ca/">Sierra Driving School</a></h4>
+        <p class="description">
+          At Sierra Driving School offers convenient drivers education programs, serving the city of Airdrie, Alberta and its surrounding communities
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+        <h4 class="title"><img class="image-sites" src="assets/img/digiato.PNG"/><a target="_blank" href="https://digiato.com/">Digiato</a></h4>
+        <p class="description">
+          Digiato is looking for professional, trustworthy news and a way of commercialization.
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+        <h4 class="title"><img class="image-sites" src="assets/img/samaneahan.PNG"/><a target="_blank" href="https://samaneahan.com/">Samaneahan</a></h4>
+        <p class="description">
+          Online system for buying, selling and price of rebar, beam, steel sheet, can and profile, pipe, corner and stud
+        </p>
+      </div>
+      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+        <h4 class="title"><img class="image-sites" src="assets/img/dr.PNG"/><a target="_blank" href="https://www.hidoctor.ir/">Hi Doctor</a></h4>
+        <p class="description">
+          HiDoctor is an Iranian medical magazine offering a wide range of articles on health, wellness, and medical topics.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+  
+    <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -446,75 +518,7 @@
     
     <!-- End Services Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
-      <div class="container">
-        <div class="section-title">
-          <h2>Featured Portfolio Pieces</h2>
-          <p>
-            These are the latest projects I've been working on, showcasing my expertise and creativity in web development. Explore my recent work to see the innovative solutions I've delivered.
-          </p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <h4 class="title"><img class="image-sites" src="assets/img/tutor.PNG"/><a href="https://itutorfriends.com/" target="_blank">Itutorfriends</a></h4>
-            <p class="description">
-              Online tutoring platform connecting Canadian students with peer tutors
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <h4 class="title"><img class="image-sites"src="assets/img/Blacks-Flies.png"/><a target="_blank" href="https://blacksflies.com/">Blacksflies</a></h4>
-            <p class="description">
-              Wholesaler Of Premium Hand-Tied Fishing Flies For Canadian And US Dealers
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <h4 class="title"><img class="image-sites" src="assets/img/airdrie.PNG"/><a target="_blank" href="https://airdriebriarhillmidwives.com/">Briarhillmidwives</a></h4>
-            <p class="description">
-              Briar Hill Midwives is the longest established midwifery practice in the Calgary Municipal District.
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-            <h4 class="title"><img class="image-sites" src="assets/img/carmelita.PNG"/><a target="_blank" href="https://carmelitarealtor.com/">Carmelitarealtor</a></h4>
-            <p class="description">
-              Carmelita is a Personal Real Estate Corporation
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <h4 class="title"><img class="image-sites" src="assets/img/Tayco-Water-Solutions.png"/><a target="_blank" href="https://taycowatersolutions.com/">Taycowatersolutions</a></h4>
-            <p class="description">
-              SMART WATER RECYCLING For Residential and Commercial Uses
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <h4 class="title"><img class="image-sites" src="assets/img/sierradriving.png"/><a target="_blank" href="https://www.sierradrivingschool.ca/">Sierra Driving School</a></h4>
-            <p class="description">
-              At Sierra Driving School offers convenient drivers education programs, serving the city of Airdrie, Alberta and its surrounding communities
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-            <h4 class="title"><img class="image-sites" src="assets/img/digiato.PNG"/><a target="_blank" href="https://digiato.com/">Digiato</a></h4>
-            <p class="description">
-              Digiato is looking for professional, trustworthy news and a way of commercialization.
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <h4 class="title"><img class="image-sites" src="assets/img/samaneahan.PNG"/><a target="_blank" href="https://samaneahan.com/">Samaneahan</a></h4>
-            <p class="description">
-              Online system for buying, selling and price of rebar, beam, steel sheet, can and profile, pipe, corner and stud
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
-            <h4 class="title"><img class="image-sites" src="assets/img/dr.PNG"/><a target="_blank" href="https://www.hidoctor.ir/">Hi Doctor</a></h4>
-            <p class="description">
-              HiDoctor is an Iranian medical magazine offering a wide range of articles on health, wellness, and medical topics.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Portfolio Section -->
+  
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
