--- a/index.html
+++ b/index.html
@@ -450,6 +450,12 @@
           At Sierra Driving School offers convenient drivers education programs, serving the city of Airdrie, Alberta and its surrounding communities
         </p>
       </div>
+       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+        <h4 class="title"><img class="image-sites" src="assets/img/luxuri.png"/><a target="_blank" href="https://www.luxuriance.io/">luxuriance</a></h4>
+        <p class="description">
+         Luxuriance is a reference marketing company specialised in sales of Artificial Intelligence products for forex and commodities markets empowering it’s customers with knowledge yielding benefits for everybody involved.
+        </p>
+      </div>
       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
         <h4 class="title"><img class="image-sites" src="assets/img/digiato.PNG"/><a target="_blank" href="https://digiato.com/">Digiato</a></h4>
         <p class="description">
