--- a/index.html
+++ b/index.html
@@ -468,12 +468,12 @@
           Online system for buying, selling and price of rebar, beam, steel sheet, can and profile, pipe, corner and stud
         </p>
       </div>
-      <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+<!--       <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
         <h4 class="title"><img class="image-sites" src="assets/img/dr.PNG"/><a target="_blank" href="https://www.hidoctor.ir/">Hi Doctor</a></h4>
         <p class="description">
           HiDoctor is an Iranian medical magazine offering a wide range of articles on health, wellness, and medical topics.
         </p>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
